--- a/paper.bib
+++ b/paper.bib
@@ -5556,7 +5556,7 @@
 	Year = 2009,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/200912535}}
 
-@article{2015ApJ...800...60M,
+@article{miniati15,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...60M},
 	Archiveprefix = {arXiv},
