rephrased dummy's guide

--- a/paper.tex
+++ b/paper.tex
@@ -427,7 +427,7 @@ protons of the ICM is given by
 where we use the cross-section, $\sigma^{+/-,0}(p)$, given by the
 fitting formula in \citep{1986ApJ...307...47D}.
 
-\subsection{Dummy's guide} 
+\subsection{Physical picture of reacceleration}
 \label{sec:dummy} 
 
 All of the physics of turbulent reacceleration is effectively encapsulated in the diffusion coefficient, which can be rewritten as \citep{miniati15}:
